--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
     <section id="about">
       <h2>About</h2>
       <div>
-        <p>Michael received his Ph.D. in Computer Science from <abbr title="The University of California, Los Angeles">UCLA</abbr> in 2010. Michael joined the IMDEA Software Institute in September 2013, following a post-doc at the Université Paris Diderot, on a fellowship awarded by La Fondation Sciences Mathématiques de Paris. Prior to receiving his doctorate, Michael completed his undergraduate studies at the University of Binghamton, of the State University of New York (SUNY). He has been a teaching assistant for undergraduate courses at UCLA and Université Paris Diderot, and has held internships at Microsoft Research, NASA Ames Research Center, and IBM.</p>
-<p>Michael is primarily interested in developing formal techniques to foster the construction of reliable software systems. Specifically, Michael has developed formal models to support the analysis of reactive, parallel, and distributed software systems, studied their theoretical properties (i.e., decidability, complexity), and developed exploration techniques to quickly discover faulty behavior in, or prove correctness of, such systems. Besides being the/a principal author of many noteworthy scientific publications (see the Publications list below), Michael is a lead developer of some software verification tools (see the Software list below).</p>
+        
+<p>Michael received his Ph.D. in Computer Science from UCLA in 2010 and joined the IMDEA Software Institute in 2013, following a postdoc fellowship at the Université Paris Diderot awarded by La Fondation Sciences Mathématiques de Paris. Prior to all that, Michael completed his undergraduate studies at Binghamton University (SUNY). He has been a teaching assistant for undergraduate courses at UCLA and Université Paris Diderot, and has held internships at Microsoft Research, NASA Ames Research Center, and IBM.</p>
+<p>Michael's research enables the construction of reliable software by developing the foundations for effective programming abstractions and informative program analysis tools. Integrating technological trends with knowledge from several research communities spanning automata theory, programming languages, and distributed systems, his contributions include establishing the theoretical limits of program analysis, devising tractable approximations for intractable analysis problems, and building effective analysis tools.</p>
 
       </div>
     </section>
@@ -33,7 +34,7 @@
         <div class="item">
           <div class="head">
             <span class="thing">External Review Committee</span>
-            <span class="place">POPL&nbsp'15</span>
+            <span class="place">POPL '15</span>
           </div>
           <div class="info">
             <a href="http://popl.mpi-sws.org/2015/">42nd ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages</a>
@@ -42,7 +43,7 @@
         <div class="item">
           <div class="head">
             <span class="thing">Program Committee</span>
-            <span class="place">FM&nbsp'15</span>
+            <span class="place">FM '15</span>
           </div>
           <div class="info">
             <a href="http://fm2015.ifi.uio.no">20th International Symposium on Formal Methods</a>
@@ -51,7 +52,7 @@
         <div class="item">
           <div class="head">
             <span class="thing">Program Chair</span>
-            <span class="place">EC<sup>2</sup>&nbsp'14</span>
+            <span class="place">EC<sup>2</sup> '14</span>
           </div>
           <div class="info">
             <a href="http://software.imdea.org/ec2-2014/">7th International Workshop on Exploiting Concurrency Efficiently and Correctly</a>
@@ -60,7 +61,7 @@
         <div class="item">
           <div class="head">
             <span class="thing">External Review Committee</span>
-            <span class="place">PLDI&nbsp'14</span>
+            <span class="place">PLDI '14</span>
           </div>
           <div class="info">
             <a href="http://conferences.inf.ed.ac.uk/pldi2014/">35th annual ACM SIGPLAN Conference on Programming Language Design and Implementation</a>
@@ -69,7 +70,7 @@
         <div class="item">
           <div class="head">
             <span class="thing">External Review Committee</span>
-            <span class="place">POPL&nbsp'13</span>
+            <span class="place">POPL '13</span>
           </div>
           <div class="info">
             <a href="http://popl.mpi-sws.org/2013/">40th ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages</a>
@@ -78,7 +79,7 @@
         <div class="item">
           <div class="head">
             <span class="thing">Program Committee</span>
-            <span class="place">VMCAI&nbsp'13</span>
+            <span class="place">VMCAI '13</span>
           </div>
           <div class="info">
             <a href="http://vmcai13.di.univr.it/">14th International Conference on Verification, Model Checking and Abstract Interpretation</a>
@@ -93,7 +94,7 @@
             <span class="thing">
                 <a>SMACK+Corral: A Modular Verifier</a>
             </span>
-            <span class="place">TACAS&nbsp'15</span>
+            <span class="place">TACAS '15</span>
           </div>
             <div class="info">
               competition contribution to SV-COMP 2015
@@ -104,7 +105,7 @@
             <span class="thing">
                 <a>Analysis of Asynchronous Programs with Event-Based Synchronization</a>
             </span>
-            <span class="place">ESOP&nbsp'15</span>
+            <span class="place">ESOP '15</span>
           </div>
         </div>
         <div class="item">
@@ -112,7 +113,7 @@
             <span class="thing">
                 <a>Tractable Refinement Checking for Concurrent Objects</a>
             </span>
-            <span class="place">POPL&nbsp'15</span>
+            <span class="place">POPL '15</span>
           </div>
         </div>
         <div class="item">
@@ -120,7 +121,7 @@
             <span class="thing">
                 <a href="papers/conf-cav-RakamaricE14.pdf">SMACK: Decoupling Source Language Details from Verifier Implementations</a>
             </span>
-            <span class="place">CAV&nbsp'14</span>
+            <span class="place">CAV '14</span>
           </div>
             <div class="info">
               tool paper
@@ -131,7 +132,7 @@
             <span class="thing">
                 <a href="papers/conf-spin-EmmiOT14.pdf">Exploiting Synchronization in the Analysis of Shared-Memory Asynchronous Programs</a>
             </span>
-            <span class="place">SPIN&nbsp'14</span>
+            <span class="place">SPIN '14</span>
           </div>
         </div>
         <div class="item">
@@ -139,7 +140,7 @@
             <span class="thing">
                 <a href="papers/journals-sttt-BouajjaniE14.pdf">Bounded Phase Analysis of Message-Passing Programs</a>
             </span>
-            <span class="place">STTT&nbsp'14</span>
+            <span class="place">STTT '14</span>
           </div>
         </div>
         <div class="item">
@@ -147,7 +148,7 @@
             <span class="thing">
                 <a href="papers/conf-esop-BouajjaniEEH13.pdf">Verifying Concurrent Programs Against Sequential Specifications</a>
             </span>
-            <span class="place">ESOP&nbsp'13</span>
+            <span class="place">ESOP '13</span>
           </div>
         </div>
         <div class="item">
@@ -155,7 +156,7 @@
             <span class="thing">
                 <a href="papers/journals-toplas-BouajjaniE13.pdf">Analysis of Recursively Parallel Programs</a>
             </span>
-            <span class="place">TOPLAS&nbsp'13</span>
+            <span class="place">TOPLAS '13</span>
           </div>
         </div>
         <div class="item">
@@ -163,7 +164,7 @@
             <span class="thing">
                 <a href="papers/conf-fse-EmmiLQ12.pdf">Asynchronous Programs with Prioritized Task-Buffers</a>
             </span>
-            <span class="place">FSE&nbsp'12</span>
+            <span class="place">FSE '12</span>
           </div>
         </div>
         <div class="item">
@@ -171,7 +172,7 @@
             <span class="thing">
                 <a href="papers/conf-sas-EmmiL12.pdf">Finding Non-Terminating Executions in Distributed Asynchronous Programs</a>
             </span>
-            <span class="place">SAS&nbsp'12</span>
+            <span class="place">SAS '12</span>
           </div>
         </div>
         <div class="item">
@@ -179,7 +180,7 @@
             <span class="thing">
                 <a href="papers/conf-cav-AtigBEL12.pdf">Detecting Fair Non-Termination in Multithreaded Programs</a>
             </span>
-            <span class="place">CAV&nbsp;'12</span>
+            <span class="place">CAV '12</span>
           </div>
         </div>
         <div class="item">
@@ -187,7 +188,7 @@
             <span class="thing">
                 <a href="papers/conf-tacas-BouajjaniE12.pdf">Bounded Phase Analysis of Message-Passing Programs</a>
             </span>
-            <span class="place">TACAS&nbsp'12</span>
+            <span class="place">TACAS '12</span>
           </div>
         </div>
         <div class="item">
@@ -195,7 +196,7 @@
             <span class="thing">
                 <a href="papers/conf-popl-BouajjaniE12.pdf">Analysis of Recursively Parallel Programs</a>
             </span>
-            <span class="place">POPL&nbsp'12</span>
+            <span class="place">POPL '12</span>
           </div>
         </div>
         <div class="item">
@@ -203,7 +204,7 @@
             <span class="thing">
                 <a href="papers/conf-sas-BouajjaniEP11.pdf">On Sequentializing Concurrent Programs</a>
             </span>
-            <span class="place">SAS&nbsp'11</span>
+            <span class="place">SAS '11</span>
           </div>
         </div>
         <div class="item">
@@ -211,7 +212,7 @@
             <span class="thing">
                 <a href="papers/conf-popl-EmmiQR11.pdf">Delay-Bounded Scheduling</a>
             </span>
-            <span class="place">POPL&nbsp'11</span>
+            <span class="place">POPL '11</span>
           </div>
         </div>
         <div class="item">
@@ -219,7 +220,7 @@
             <span class="thing">
                 <a href="papers/conf-pldi-EmmiMM10.pdf">Parameterized Verification of Transactional Memories</a>
             </span>
-            <span class="place">PLDI&nbsp'10</span>
+            <span class="place">PLDI '10</span>
           </div>
         </div>
         <div class="item">
@@ -227,7 +228,7 @@
             <span class="thing">
                 <a href="papers/conf-tacas-EmmiJKM09.pdf">Verifying Reference Counting Implementations</a>
             </span>
-            <span class="place">TACAS&nbsp'09</span>
+            <span class="place">TACAS '09</span>
           </div>
         </div>
         <div class="item">
@@ -235,7 +236,7 @@
             <span class="thing">
                 <a href="papers/conf-fm-EmmiGP08.pdf">Assume-Guarantee Verification for Interface Automata</a>
             </span>
-            <span class="place">FM&nbsp'08</span>
+            <span class="place">FM '08</span>
           </div>
         </div>
         <div class="item">
@@ -243,7 +244,7 @@
             <span class="thing">
                 <a href="papers/conf-pldi-ChenHPECCP08.pdf">Type-Preserving Compilation for Large-Scale Optimizing Object-Oriented Compilers</a>
             </span>
-            <span class="place">PLDI&nbsp'08</span>
+            <span class="place">PLDI '08</span>
           </div>
         </div>
         <div class="item">
@@ -251,7 +252,7 @@
             <span class="thing">
                 <a href="papers/conf-sandbox-WangEF07.pdf">Assembling an Expressive Facial Animation System</a>
             </span>
-            <span class="place">Sandbox&nbsp'07</span>
+            <span class="place">Sandbox '07</span>
           </div>
         </div>
         <div class="item">
@@ -259,7 +260,7 @@
             <span class="thing">
                 <a href="papers/conf-issta-EmmiMS07.pdf">Dynamic Test Input Generation for Database Applications</a>
             </span>
-            <span class="place">ISSTA&nbsp'07</span>
+            <span class="place">ISSTA '07</span>
           </div>
         </div>
         <div class="item">
@@ -267,7 +268,7 @@
             <span class="thing">
                 <a href="papers/conf-vmcai-EmmiM07.pdf">Verifying Compensating Transactions</a>
             </span>
-            <span class="place">VMCAI&nbsp'07</span>
+            <span class="place">VMCAI '07</span>
           </div>
         </div>
         <div class="item">
@@ -275,7 +276,7 @@
             <span class="thing">
                 <a href="papers/conf-popl-EmmiFJM07.pdf">Lock Allocation</a>
             </span>
-            <span class="place">POPL&nbsp'07</span>
+            <span class="place">POPL '07</span>
           </div>
         </div>
         <div class="item">
@@ -283,7 +284,7 @@
             <span class="thing">
                 <a href="papers/conf-hscc-EmmiM06.pdf">Decision Problems for the Verification of Real-Time Software</a>
             </span>
-            <span class="place">HSCC&nbsp'06</span>
+            <span class="place">HSCC '06</span>
           </div>
         </div>
     </section>
@@ -327,10 +328,10 @@ Campus Montegancedo UPM<br>
 España
 </div>
         <div class="item">
-          E / <a href="mailto:michael.emmi@gmail.com">michael.emmi@gmail.com</a>
+          <a href="mailto:michael.emmi@gmail.com">michael.emmi@gmail.com</a>
         </div>
-          <div class="item">T / +34 911 012 202 (Spain)</div>
-          <div class="item">T / +1 (310) 564-6453 (USA)</div>
+          <div class="item">+34 911 012 202 (Spain)</div>
+          <div class="item">+1 (310) 564-6453 (USA)</div>
     </section>
 
   </body>
