Added POPL '15 paper.

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <div class="item">
           <div class="head">
             <span class="thing">
-                <a>Tractable Refinement Checking for Concurrent Objects</a>
+                <a href="papers/conf-popl-BouajjaniEEH15.pdf">Tractable Refinement Checking for Concurrent Objects</a>
             </span>
             <span class="place">POPL '15</span>
           </div>
