Corrected quotation marks.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div>
         
 <p>Michael received his Ph.D. in Computer Science from UCLA in 2010 and joined the IMDEA Software Institute in 2013, following a postdoc fellowship at the Université Paris Diderot awarded by La Fondation Sciences Mathématiques de Paris. Prior to all that, Michael completed his undergraduate studies at Binghamton University (SUNY). He has been a teaching assistant for undergraduate courses at UCLA and Université Paris Diderot, and has held internships at Microsoft Research, NASA Ames Research Center, and IBM.</p>
-<p>Michael's research enables the construction of reliable software by developing the foundations for effective programming abstractions and informative program analysis tools. Integrating technological trends with knowledge from several research communities spanning automata theory, programming languages, and distributed systems, his contributions include establishing the theoretical limits of program analysis, devising tractable approximations for intractable analysis problems, and building effective analysis tools.</p>
+<p>Michael’s research enables the construction of reliable software by developing the foundations for effective programming abstractions and informative program analysis tools. Integrating technological trends with knowledge from several research communities spanning automata theory, programming languages, and distributed systems, his contributions include establishing the theoretical limits of program analysis, devising tractable approximations for intractable analysis problems, and building effective analysis tools.</p>
 
       </div>
     </section>
@@ -34,7 +34,7 @@
         <div class="item">
           <div class="head">
             <span class="thing">External Review Committee</span>
-            <span class="place">POPL '15</span>
+            <span class="place">POPL ’15</span>
           </div>
           <div class="info">
             <a href="http://popl.mpi-sws.org/2015/">42nd ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages</a>
@@ -43,7 +43,7 @@
         <div class="item">
           <div class="head">
             <span class="thing">Program Committee</span>
-            <span class="place">FM '15</span>
+            <span class="place">FM ’15</span>
           </div>
           <div class="info">
             <a href="http://fm2015.ifi.uio.no">20th International Symposium on Formal Methods</a>
@@ -52,7 +52,7 @@
         <div class="item">
           <div class="head">
             <span class="thing">Program Chair</span>
-            <span class="place">EC<sup>2</sup> '14</span>
+            <span class="place">EC<sup>2</sup> ’14</span>
           </div>
           <div class="info">
             <a href="http://software.imdea.org/ec2-2014/">7th International Workshop on Exploiting Concurrency Efficiently and Correctly</a>
@@ -61,7 +61,7 @@
         <div class="item">
           <div class="head">
             <span class="thing">External Review Committee</span>
-            <span class="place">PLDI '14</span>
+            <span class="place">PLDI ’14</span>
           </div>
           <div class="info">
             <a href="http://conferences.inf.ed.ac.uk/pldi2014/">35th annual ACM SIGPLAN Conference on Programming Language Design and Implementation</a>
@@ -70,7 +70,7 @@
         <div class="item">
           <div class="head">
             <span class="thing">External Review Committee</span>
-            <span class="place">POPL '13</span>
+            <span class="place">POPL ’13</span>
           </div>
           <div class="info">
             <a href="http://popl.mpi-sws.org/2013/">40th ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages</a>
@@ -79,7 +79,7 @@
         <div class="item">
           <div class="head">
             <span class="thing">Program Committee</span>
-            <span class="place">VMCAI '13</span>
+            <span class="place">VMCAI ’13</span>
           </div>
           <div class="info">
             <a href="http://vmcai13.di.univr.it/">14th International Conference on Verification, Model Checking and Abstract Interpretation</a>
@@ -94,7 +94,7 @@
             <span class="thing">
                 <a>SMACK+Corral: A Modular Verifier</a>
             </span>
-            <span class="place">TACAS '15</span>
+            <span class="place">TACAS ’15</span>
           </div>
             <div class="info">
               competition contribution to SV-COMP 2015
@@ -105,7 +105,7 @@
             <span class="thing">
                 <a>Analysis of Asynchronous Programs with Event-Based Synchronization</a>
             </span>
-            <span class="place">ESOP '15</span>
+            <span class="place">ESOP ’15</span>
           </div>
         </div>
         <div class="item">
@@ -113,7 +113,7 @@
             <span class="thing">
                 <a href="papers/conf-popl-BouajjaniEEH15.pdf">Tractable Refinement Checking for Concurrent Objects</a>
             </span>
-            <span class="place">POPL '15</span>
+            <span class="place">POPL ’15</span>
           </div>
         </div>
         <div class="item">
@@ -121,7 +121,7 @@
             <span class="thing">
                 <a href="papers/conf-cav-RakamaricE14.pdf">SMACK: Decoupling Source Language Details from Verifier Implementations</a>
             </span>
-            <span class="place">CAV '14</span>
+            <span class="place">CAV ’14</span>
           </div>
             <div class="info">
               tool paper
@@ -132,7 +132,7 @@
             <span class="thing">
                 <a href="papers/conf-spin-EmmiOT14.pdf">Exploiting Synchronization in the Analysis of Shared-Memory Asynchronous Programs</a>
             </span>
-            <span class="place">SPIN '14</span>
+            <span class="place">SPIN ’14</span>
           </div>
         </div>
         <div class="item">
@@ -140,7 +140,7 @@
             <span class="thing">
                 <a href="papers/journals-sttt-BouajjaniE14.pdf">Bounded Phase Analysis of Message-Passing Programs</a>
             </span>
-            <span class="place">STTT '14</span>
+            <span class="place">STTT ’14</span>
           </div>
         </div>
         <div class="item">
@@ -148,7 +148,7 @@
             <span class="thing">
                 <a href="papers/conf-esop-BouajjaniEEH13.pdf">Verifying Concurrent Programs Against Sequential Specifications</a>
             </span>
-            <span class="place">ESOP '13</span>
+            <span class="place">ESOP ’13</span>
           </div>
         </div>
         <div class="item">
@@ -156,7 +156,7 @@
             <span class="thing">
                 <a href="papers/journals-toplas-BouajjaniE13.pdf">Analysis of Recursively Parallel Programs</a>
             </span>
-            <span class="place">TOPLAS '13</span>
+            <span class="place">TOPLAS ’13</span>
           </div>
         </div>
         <div class="item">
@@ -164,7 +164,7 @@
             <span class="thing">
                 <a href="papers/conf-fse-EmmiLQ12.pdf">Asynchronous Programs with Prioritized Task-Buffers</a>
             </span>
-            <span class="place">FSE '12</span>
+            <span class="place">FSE ’12</span>
           </div>
         </div>
         <div class="item">
@@ -172,7 +172,7 @@
             <span class="thing">
                 <a href="papers/conf-sas-EmmiL12.pdf">Finding Non-Terminating Executions in Distributed Asynchronous Programs</a>
             </span>
-            <span class="place">SAS '12</span>
+            <span class="place">SAS ’12</span>
           </div>
         </div>
         <div class="item">
@@ -180,7 +180,7 @@
             <span class="thing">
                 <a href="papers/conf-cav-AtigBEL12.pdf">Detecting Fair Non-Termination in Multithreaded Programs</a>
             </span>
-            <span class="place">CAV '12</span>
+            <span class="place">CAV ’12</span>
           </div>
         </div>
         <div class="item">
@@ -188,7 +188,7 @@
             <span class="thing">
                 <a href="papers/conf-tacas-BouajjaniE12.pdf">Bounded Phase Analysis of Message-Passing Programs</a>
             </span>
-            <span class="place">TACAS '12</span>
+            <span class="place">TACAS ’12</span>
           </div>
         </div>
         <div class="item">
@@ -196,7 +196,7 @@
             <span class="thing">
                 <a href="papers/conf-popl-BouajjaniE12.pdf">Analysis of Recursively Parallel Programs</a>
             </span>
-            <span class="place">POPL '12</span>
+            <span class="place">POPL ’12</span>
           </div>
         </div>
         <div class="item">
@@ -204,7 +204,7 @@
             <span class="thing">
                 <a href="papers/conf-sas-BouajjaniEP11.pdf">On Sequentializing Concurrent Programs</a>
             </span>
-            <span class="place">SAS '11</span>
+            <span class="place">SAS ’11</span>
           </div>
         </div>
         <div class="item">
@@ -212,7 +212,7 @@
             <span class="thing">
                 <a href="papers/conf-popl-EmmiQR11.pdf">Delay-Bounded Scheduling</a>
             </span>
-            <span class="place">POPL '11</span>
+            <span class="place">POPL ’11</span>
           </div>
         </div>
         <div class="item">
@@ -220,7 +220,7 @@
             <span class="thing">
                 <a href="papers/conf-pldi-EmmiMM10.pdf">Parameterized Verification of Transactional Memories</a>
             </span>
-            <span class="place">PLDI '10</span>
+            <span class="place">PLDI ’10</span>
           </div>
         </div>
         <div class="item">
@@ -228,7 +228,7 @@
             <span class="thing">
                 <a href="papers/conf-tacas-EmmiJKM09.pdf">Verifying Reference Counting Implementations</a>
             </span>
-            <span class="place">TACAS '09</span>
+            <span class="place">TACAS ’09</span>
           </div>
         </div>
         <div class="item">
@@ -236,7 +236,7 @@
             <span class="thing">
                 <a href="papers/conf-fm-EmmiGP08.pdf">Assume-Guarantee Verification for Interface Automata</a>
             </span>
-            <span class="place">FM '08</span>
+            <span class="place">FM ’08</span>
           </div>
         </div>
         <div class="item">
@@ -244,7 +244,7 @@
             <span class="thing">
                 <a href="papers/conf-pldi-ChenHPECCP08.pdf">Type-Preserving Compilation for Large-Scale Optimizing Object-Oriented Compilers</a>
             </span>
-            <span class="place">PLDI '08</span>
+            <span class="place">PLDI ’08</span>
           </div>
         </div>
         <div class="item">
@@ -252,7 +252,7 @@
             <span class="thing">
                 <a href="papers/conf-sandbox-WangEF07.pdf">Assembling an Expressive Facial Animation System</a>
             </span>
-            <span class="place">Sandbox '07</span>
+            <span class="place">Sandbox ’07</span>
           </div>
         </div>
         <div class="item">
@@ -260,7 +260,7 @@
             <span class="thing">
                 <a href="papers/conf-issta-EmmiMS07.pdf">Dynamic Test Input Generation for Database Applications</a>
             </span>
-            <span class="place">ISSTA '07</span>
+            <span class="place">ISSTA ’07</span>
           </div>
         </div>
         <div class="item">
@@ -268,7 +268,7 @@
             <span class="thing">
                 <a href="papers/conf-vmcai-EmmiM07.pdf">Verifying Compensating Transactions</a>
             </span>
-            <span class="place">VMCAI '07</span>
+            <span class="place">VMCAI ’07</span>
           </div>
         </div>
         <div class="item">
@@ -276,7 +276,7 @@
             <span class="thing">
                 <a href="papers/conf-popl-EmmiFJM07.pdf">Lock Allocation</a>
             </span>
-            <span class="place">POPL '07</span>
+            <span class="place">POPL ’07</span>
           </div>
         </div>
         <div class="item">
@@ -284,7 +284,7 @@
             <span class="thing">
                 <a href="papers/conf-hscc-EmmiM06.pdf">Decision Problems for the Verification of Real-Time Software</a>
             </span>
-            <span class="place">HSCC '06</span>
+            <span class="place">HSCC ’06</span>
           </div>
         </div>
     </section>
