Added PLDI ´15 paper.

--- a/index.html
+++ b/index.html
@@ -92,6 +92,14 @@
         <div class="item">
           <div class="head">
             <span class="thing">
+                <a>Monitoring Refinement via Symbolic Reasoning</a>
+            </span>
+            <span class="place">PLDI ’15</span>
+          </div>
+        </div>
+        <div class="item">
+          <div class="head">
+            <span class="thing">
                 <a>SMACK+Corral: A Modular Verifier</a>
             </span>
             <span class="place">TACAS ’15</span>
