Added PC membership.

--- a/index.html
+++ b/index.html
@@ -33,6 +33,15 @@
       <h2>Professional Activities</h2>
         <div class="item">
           <div class="head">
+            <span class="thing">Program Committee</span>
+            <span class="place">EC<sup>2</sup> ’15</span>
+          </div>
+          <div class="info">
+            <a href="http://multicore.doc.ic.ac.uk/events/ec2/">8th International Workshop on Exploiting Concurrency Efficiently and Correctly</a>
+          </div>
+        </div>
+        <div class="item">
+          <div class="head">
             <span class="thing">External Review Committee</span>
             <span class="place">POPL ’15</span>
           </div>
