Added POPL ’16 ERC.

--- a/index.html
+++ b/index.html
@@ -33,6 +33,15 @@
       <h2>Professional Activities</h2>
         <div class="item">
           <div class="head">
+            <span class="thing">External Review Committee</span>
+            <span class="place">POPL ’16</span>
+          </div>
+          <div class="info">
+            <a href="http://popl.mpi-sws.org/2016/">43rd ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages</a>
+          </div>
+        </div>
+        <div class="item">
+          <div class="head">
             <span class="thing">Program Committee</span>
             <span class="place">EC<sup>2</sup> ’15</span>
           </div>
