Added latest papers.

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <div class="item">
           <div class="head">
             <span class="thing">
-                <a>SMACK+Corral: A Modular Verifier</a>
+                <a href="papers/conf-tacas-HaranCELQR15.pdf">SMACK+Corral: A Modular Verifier</a>
             </span>
             <span class="place">TACAS ’15</span>
           </div>
@@ -129,7 +129,7 @@
         <div class="item">
           <div class="head">
             <span class="thing">
-                <a>Analysis of Asynchronous Programs with Event-Based Synchronization</a>
+                <a href="papers/conf-esop-EmmiGMR15.pdf">Analysis of Asynchronous Programs with Event-Based Synchronization</a>
             </span>
             <span class="place">ESOP ’15</span>
           </div>
