--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset='utf-8'>
     <meta name="description" class="template" content="Michael Emmi: Researcher / IMDEA Software Institute">
+    <link href='http://fonts.googleapis.com/css?family=IM+Fell+DW+Pica|IM+Fell+DW+Pica+SC|IM+Fell+Double+Pica|IM+Fell+Double+Pica+SC' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" media="screen" href="css/style.css">
     <title>Michael Emmi</title>
     <script type="text/javascript" src="js/Hyphenator.js"></script>
