Added PPoPP ERC membership.

--- a/index.html
+++ b/index.html
@@ -43,6 +43,15 @@
         </div>
         <div class="item">
           <div class="head">
+            <span class="thing">External Review Committee</span>
+            <span class="place">PPoPP ’16</span>
+          </div>
+          <div class="info">
+            <a href="http://www.sigplan.org/Conferences/PPOPP/">21st ACM SIGPLAN Symposium on Principles and Practice of Parallel Programming</a>
+          </div>
+        </div>
+        <div class="item">
+          <div class="head">
             <span class="thing">Program Committee</span>
             <span class="place">EC<sup>2</sup> ’15</span>
           </div>
