Added ICALP acceptance.

--- a/index.html
+++ b/index.html
@@ -120,6 +120,14 @@
         <div class="item">
           <div class="head">
             <span class="thing">
+                <a>On Reducing Linearizability to State Reachability</a>
+            </span>
+            <span class="place">ICALP ’15</span>
+          </div>
+        </div>
+        <div class="item">
+          <div class="head">
+            <span class="thing">
                 <a>Monitoring Refinement via Symbolic Reasoning</a>
             </span>
             <span class="place">PLDI ’15</span>
