Added CAV publication.

--- a/index.html
+++ b/index.html
@@ -125,6 +125,14 @@
             <div class="item">
               <div class="head">
                 <span class="thing">
+                    <a>Systematic Asynchrony Bug Exploration for Android Apps</a>
+                </span>
+                <span class="place">CAV ’15</span>
+              </div>
+            </div>
+            <div class="item">
+              <div class="head">
+                <span class="thing">
                     <a>On Reducing Linearizability to State Reachability</a>
                 </span>
                 <span class="place">ICALP ’15</span>
